--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -74,7 +74,7 @@ jobs:
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
       run: |-
-        ./kustomize edit set image asia.gcr.io/PROJECT_ID/IMAGE:TAG=asia.gcr.io/$PROJECT_ID/$IMAGE
+        ./kustomize edit set image asia.gcr.io/PROJECT_ID/IMAGE=asia.gcr.io/$PROJECT_ID/$IMAGE
         ./kustomize build . | kubectl apply -f -
         # kubectl rollout status deployment/$DEPLOYMENT_NAME
         # kubectl get services -o wide
