--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
